--- a/src/app/index.css
+++ b/src/app/index.css
@@ -2,7 +2,8 @@
 
 :root {
   font-family: IBM Plex Sans Variable, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
+  line-height: 1.21;
+  letter-spacing: -0.02em;
   font-weight: 400;
 
   color-scheme: light dark;
